# DATN_2026

./: .gitignore  go.mod  mlback_openapi.yaml  openapi.yml  openapi_ml.yml
air_quality_backend/: .env.example  Dockerfile  README.md  docker-compose.yml  go.sum  init.sql  main.go  openapi_admin_patch.yml  openapi_sensor_access_patch.yml  test_admin.sh  test_api.sh  test_sensor_access.sh
air_quality_frontend/: .dockerignore  CHANGELOG.md  Dockerfile  Dockerfile.prod  README.md  RELEASE_UI_REDESIGN.md  docker-compose.yml  docker-compose.yml.save  index.html  nginx.conf  package.json  (+4 more)
airquality-ml-modeling/: .gitignore  Dockerfile  Dockerfile.retrain  LICENSE  README.md  RELEASE.md  capability.md  deploy.py  docker-compose.yml  openapi.yaml  pyproject.toml  retrain.py
airquality-ml-modeling/configs/: config.py  deploy_config.py
airquality-ml-modeling/notebooks/: arima_model.ipynb
airquality-ml-modeling/src/airquality_ml_modeling/data_loader/: loader.py
airquality-ml-modeling/src/airquality_ml_modeling/models/: __init__.py  base_model.py
airquality-ml-modeling/src/airquality_ml_modeling/models/arima/: model.py
airquality-ml-modeling/src/airquality_ml_modeling/models/bilstm/: model.py
airquality-ml-modeling/src/airquality_ml_modeling/models/gru/: model.py
airquality-ml-modeling/src/airquality_ml_modeling/models/informer/: __init__.py  model.py
airquality-ml-modeling/src/airquality_ml_modeling/models/lstm/: model.py
airquality-ml-modeling/src/airquality_ml_modeling/utils/: drift.py  metrics.py
airquality-ml-modeling/tests/: test_deploy.py  test_drift.py
(+116 files in other folders)
