[project]
name = "airquality_ml_modeling"
version = "0.1.0"
description = "Modeling for Air Quality models using Pytorch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "pmdarima>=2.0.4",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "tabulate>=0.9.0",
    "torch>=2.3.0",
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
test = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]

[tool.uv.extra-build-dependencies]
pmdarima = ["numpy"]
